--- a/homework/index.html
+++ b/homework/index.html
@@ -187,9 +187,7 @@ Standard Deviation of RMSE: 0.0173</code></pre>
 <div class="cell-output cell-output-display">
 <div>
 <figure class="figure">
-  <p><img src="https://hriday04.github.io/DATA505/wine_features_py_files/figure-html/cell-8-output-1.png"></p>
-
-<p><img src="wine_features_py_files/figure-html/cell-8-output-1.png" width="571" height="549" class="figure-img"></p>
+<p><img src="https://github.com/Hriday04/DATA505/blob/main/homework/Screen%20Shot%202025-02-04%20at%206.36.22%20PM.png" width="571" height="549" class="figure-img"></p>
 </figure>
 </div>
 </div>
