--- a/homework/logistic/index.html
+++ b/homework/logistic/index.html
@@ -284,7 +284,7 @@ Precision is ill-defined and being set to 0.0 in labels with no predicted sample
 <div class="cell-output cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="https://github.com/Hriday04/DATA505/blob/main/homework/logistic/output.png" width="663" height="523" class="figure-img"></p>
+<p><img src="raw.https://github.com/Hriday04/DATA505/blob/main/homework/logistic/output.png" width="663" height="523" class="figure-img"></p>
 </figure>
 </div>
 </div>
